Final changes for version 1.0: Setup adjusted to install scripts. Python3 enforced.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,9 @@ include MANIFEST.in
 include README.md
 include LICENSE
 include setup.py
+include scripts/__init__.py
+include scripts/filter_screenshot.py
+include scripts/filter_screenshot_gui.py
+include scripts/util.py
 include perceptual_model/__init__.py
 include perceptual_model/perceptual_model.py
